PRH-192 - spacing on the spotlight module. also fixes an issue with text not being centered, and brings down the header sizes to more reasonable numbers on small screens.

--- a/fe-scaffold/app/scss/partials/_info.scss
+++ b/fe-scaffold/app/scss/partials/_info.scss
@@ -9,7 +9,7 @@
   align-self: center;
   margin: auto;
   margin-bottom: 30px;
-  max-width: 300px;
+  max-width: 100%;
   text-align: center;
 
   @include responsive-mq(md) {
@@ -41,11 +41,12 @@
     font-size: 28px;
     justify-content: center;
     margin-bottom: 20px;
-    margin-top: 25px;
+    margin-top: 0;
     text-align: center;
 
     @include responsive-mq(md) {
       font-size: em(60px);
+      margin-top: 25px;
     }
   }
 
@@ -54,15 +55,11 @@
     text-align: center;
   }
 
-  .info-module__img {
-    margin: auto;
-    max-width: 100%;
-  }
 }
 
 .info-module__title {
   font-size: 28px;
-  margin-bottom: 35px;
+  margin-bottom: 25px;
 }
 
 .info-module__text {
